<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_title_label">Image Title</string>
    <string name="image_result_label">Image Result</string>
    <string name="title_activity_image_display">Image Display</string>
    <string name="no_internet_connection_label">No internet connection!</string>
    <string name="ok_label">OK</string>
    <string name="image_size_label">Image Size</string>
    <string name="color_filter_label">Color Filter</string>
    <string name="image_type_label">Image Type</string>
    <string name="site_filter_label">Site Filter</string>
    <string name="site_filter_hint_label">espn.com</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="share_label">Share</string>
    <string name="api_failure_label">Failed to call API!</string>
    <string name="advanced_filters_label">Advanced Filters</string>

</resources>
