<!-- fragment_edit_settings.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/edit_settings"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:orientation="vertical"  >

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_size_label"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <Spinner
        android:id="@+id/spImageSize"
        android:layout_toRightOf="@id/tvImageSize"
        android:layout_toEndOf="@id/tvImageSize"
        android:layout_alignBottom="@id/tvImageSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:entries="@array/image_sizes_array"
        android:prompt="@string/image_size_label" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_below="@id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_filter_label"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <Spinner
        android:id="@+id/spColorFilter"
        android:layout_toRightOf="@id/tvColorFilter"
        android:layout_toEndOf="@id/tvColorFilter"
        android:layout_alignBottom="@id/tvColorFilter"
        android:layout_alignLeft="@id/spImageSize"
        android:layout_alignStart="@id/spImageSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:entries="@array/color_filters_array"
        android:prompt="@string/image_size_label" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_below="@id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_type_label"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <Spinner
        android:id="@+id/spImageType"
        android:layout_toRightOf="@id/tvImageType"
        android:layout_toEndOf="@id/tvImageType"
        android:layout_alignBottom="@id/tvImageType"
        android:layout_alignLeft="@id/spImageSize"
        android:layout_alignStart="@id/spImageSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:entries="@array/image_types_array"
        android:prompt="@string/image_size_label" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_below="@id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_filter_label"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_toRightOf="@id/tvSiteFilter"
        android:layout_toEndOf="@id/tvSiteFilter"
        android:layout_alignBottom="@id/tvSiteFilter"
        android:layout_alignLeft="@id/spImageSize"
        android:layout_alignStart="@id/spImageSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/site_filter_hint_label"
        android:paddingLeft="7dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tvSiteFilter">

        <Button
            android:id="@+id/btnSave"
            style="?android:buttonBarButtonStyle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_label"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnCancel"
            style="?android:buttonBarButtonStyle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_label"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>